--- a/GearVeloAPI/GearVeloAPI/GearVeloAPI.csproj
+++ b/GearVeloAPI/GearVeloAPI/GearVeloAPI.csproj
@@ -28,7 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\Configurations\" />
+    <Folder Include="Admin\Mappers\" />
+    <Folder Include="Admin\Validators\" />
   </ItemGroup>
 
 </Project>
